system/COPY/etc/sysconfig/iptables
# Generated by iptables-save v1.3.5 on Tue Oct  5 11:55:42 2010
*filter
:INPUT ACCEPT [12246:3938412]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [55985:245536782]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p udp -m udp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -j ACCEPT
-A INPUT -p udp -m udp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5432 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5900:5999 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m limit --limit 5/min --limit-burst 7 -j LOG --log-prefix "**iptables drop**"
-A INPUT -j DROP
-A FORWARD -p icmp -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
COMMIT
# Completed on Tue Oct  5 11:55:42 2010
